--- a/TD1/lab01/lab01.ipynb
+++ b/TD1/lab01/lab01.ipynb
@@ -1389,14 +1389,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "quiz",
      "swap_columns"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- matrix (before swap) ---\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "\n",
+      "--- matrix (after swap) ---\n",
+      "[[ 0  3  2  1  4]\n",
+      " [ 5  8  7  6  9]\n",
+      " [10 13 12 11 14]]\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the matrix to work with\n",
     "matrix = np.arange(15).reshape(3,5)\n",
@@ -1406,13 +1422,15 @@
     "\n",
     "# ADD CODE HERE\n",
     "\n",
+    "matrix[:, [1, 3]] = matrix[:, [3, 1]]\n",
+    "\n",
     "print(\"\\n--- matrix (after swap) ---\")\n",
     "print(matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
