--- a/TD1/lab01/lab01.ipynb
+++ b/TD1/lab01/lab01.ipynb
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "tags": [
      "quiz",
@@ -1471,26 +1471,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "quiz",
      "nearest_to_one"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nearest value: 1.2\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the vector to work with\n",
     "vector = np.array([5, -1, 3, 1.2, 8, 0])\n",
     "\n",
     "# ADD CODE HERE\n",
-    "nearest_value = None\n",
+    "nearest_value = vector[np.argmin(np.abs(vector-1))]\n",
     "print('nearest value:', nearest_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1520,21 +1528,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {
     "tags": [
      "quiz",
      "sum_cols"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- A ---\n",
+      "[[5 8 9 5]\n",
+      " [0 0 1 7]\n",
+      " [6 9 2 4]\n",
+      " [5 2 4 2]\n",
+      " [4 7 7 9]\n",
+      " [1 7 0 6]]\n",
+      "\n",
+      "Sum: [54 56]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "\n",
     "# This is the matrix to work with\n",
     "A = np.random.randint(10,size=(6,4))\n",
     "\n",
-    "sum_cols = None # YOUR CODE HERE\n",
+    "\n",
+    "sum_cols = A.reshape(A.shape[0], -1, 2).sum(axis=2).sum(axis=0)\n",
     "\n",
     "print(\"--- A ---\")\n",
     "print(A)\n",
@@ -1544,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
