--- a/TD1/lab01/lab01.ipynb
+++ b/TD1/lab01/lab01.ipynb
@@ -161,36 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "quiz",
      "ones"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matrix_ones = np.ones((8, 4))"
+    "matrix_ones = np.ones((8,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -227,22 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "quiz",
      "shape"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the array to work with\n",
     "matrix = np.array([[ 1,  2,  3], \n",
@@ -256,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -288,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "quiz",
@@ -320,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -354,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
     "tags": [
      "quiz",
@@ -371,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -402,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "quiz",
@@ -432,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -462,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {
     "tags": [
      "quiz",
@@ -477,13 +454,13 @@
     "matrix = np.random.randint(10,size=(3,4))\n",
     "\n",
     "mean_all  = matrix.mean()\n",
-    "mean_rows = matrix.mean(axis=1)\n",
+    "mean_rows = matrix.mean(axis = 1)\n",
     "mean_cols = matrix.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -514,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "quiz",
@@ -542,16 +519,16 @@
     "print(vector)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "tmp = vector[3]\n",
-    "vector[3] = vector[1]\n",
-    "vector[1] = tmp\n",
+    "tmp = vector[1]\n",
+    "vector[1] = vector[3] \n",
+    "vector[3] = tmp\n",
     "print(\"\\n--- after swap ---\")\n",
     "print(vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -592,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 42,
    "metadata": {
     "tags": [
      "quiz",
@@ -607,19 +584,19 @@
     "                   [ 7,  8,  9], \n",
     "                   [10, 11, 12]])\n",
     "\n",
-    "A = matrix[0]\n",
-    "B = matrix[:,0]\n",
-    "C = matrix[2:, 1:]\n",
-    "D = matrix[::2,:]\n",
+    "A = matrix[0,::]\n",
+    "B = matrix[::,0]\n",
+    "C = matrix[2::, 1::]\n",
+    "D = matrix[::2, ::]\n",
     "E = matrix[:2,:2]\n",
-    "F = matrix[:, ::2]\n",
-    "G = matrix[1::2, :]\n",
-    "H = matrix[:2, 1:]"
+    "F = matrix[:,::2]\n",
+    "G = matrix[1::2, ::]\n",
+    "H = matrix[:2, 1::]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -662,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 45,
    "metadata": {
     "tags": [
      "quiz",
@@ -682,13 +659,13 @@
     "# ADD CODE HERE\n",
     "head_tail = np.zeros(10)\n",
     "head_tail[0] = 1\n",
-    "head_tail[-1]=1\n",
+    "head_tail[-1] = 1\n",
     "print(head_tail)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -724,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -759,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -805,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 57,
    "metadata": {
     "tags": [
      "quiz",
@@ -827,16 +804,17 @@
     "vector = np.array([4,2,8,  7,1,3])\n",
     "\n",
     "# ADD CODE HERE\n",
-    "tmp = vector.size//2\n",
-    "tmp2 = vector[tmp:]\n",
-    "swapped = np.concatenate((tmp2, vector[:tmp]))\n",
+    "tmp = vector[vector.size//2:]\n",
+    "tmp2 = vector[:vector.size//2]\n",
+    "swapped = np.concatenate([tmp,tmp2])\n",
+    "\n",
     "print(\"vector:\", vector)\n",
     "print(\"swapped:\", swapped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -867,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 60,
    "metadata": {
     "tags": [
      "quiz",
@@ -898,7 +876,7 @@
     "# This is the array to work with\n",
     "a = np.array([[5,6,3], [3,2,7], [4,2,8], [7,1,3]])\n",
     "\n",
-    "reshaped = a.reshape(a.size//2, 2)\n",
+    "reshaped = a.reshape(a.size//2,2)\n",
     "\n",
     "print(\"--- before ---\")\n",
     "print(a)\n",
@@ -908,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -939,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 65,
    "metadata": {
     "tags": [
      "quiz",
@@ -962,7 +940,8 @@
     "# This is the vector to work with\n",
     "a = np.random.randint(10,size=(6,))\n",
     "\n",
-    "sum_pairs = a.reshape(a.size//2,2).sum(axis=1)\n",
+    "sum_pairs = a.reshape(3,2)\n",
+    "sum_pairs = sum_pairs.sum(axis=1)\n",
     "\n",
     "print(\"vector:\", a)\n",
     "print(\"sum by pairs:\", sum_pairs)"
@@ -970,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1000,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 68,
    "metadata": {
     "tags": [
      "quiz",
@@ -1030,7 +1009,8 @@
     "# This is the matrix to work with\n",
     "A = np.random.randint(10,size=(6,4))\n",
     "\n",
-    "sum_rows = A.reshape(-1, A.shape[1]*2).sum(axis=1)\n",
+    "sum_rows = A.reshape(3,8)\n",
+    "sum_rows = sum_rows.sum(axis=1)\n",
     "\n",
     "print(\"---- A ----\")\n",
     "print(A)\n",
@@ -1040,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 69,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1070,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 85,
    "metadata": {
     "tags": [
      "quiz",
@@ -1105,10 +1085,11 @@
     "print(\"--- before ---\")\n",
     "print(matrix)\n",
     "\n",
-    "tmp = matrix.reshape(1, -1)\n",
+    "# ADD CODE HERE\n",
     "\n",
-    "mini = tmp.argmin()\n",
-    "tmp[0, mini] = -10\n",
+    "mini = matrix.argmin()\n",
+    "matrix.flat[mini] = -10\n",
+    "\n",
     "\n",
     "print()\n",
     "print(\"----- after -----\")\n",
@@ -1117,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 86,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1150,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 87,
    "metadata": {
     "tags": [
      "quiz",
@@ -1168,12 +1149,12 @@
     "max_values = matrix.max(axis=1, keepdims=True)\n",
     "\n",
     "# STEP 2. Divide the matrix by the max values\n",
-    "new_matrix = matrix / max_values"
+    "new_matrix = matrix/max_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 88,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1227,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 89,
    "metadata": {
     "tags": [
      "quiz",
@@ -1241,15 +1222,15 @@
     "w = np.array([-3, 2, 0.5, -1])\n",
     "\n",
     "# STEP 1. Compute 'w0 + w1*x1 + ... + wQ*xQ'.\n",
-    "w_dot_x = w[0] + np.dot(x, w[1:]) # SOLUTION\n",
+    "w_dot_x = w[0] + np.sum(w[1::]*x)\n",
     "    \n",
     "# STEP 2. Compute the sigmoid of 'x_dot_w', as defined above.\n",
-    "logistic = 1/(1+np.exp(-w_dot_x)) # SOLUTION"
+    "logistic = 1/(1+np.exp(-(w_dot_x)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 90,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1298,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1315,16 +1296,36 @@
      "checkboard"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ADD CODE HERE\n",
-    "checkboard = None\n",
+    "checkboard = np.zeros((8,8))\n",
+    "checkboard[1::2,::2] = 1\n",
+    "checkboard[::2, 1::2] = 1\n",
     "checkboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1375,14 +1376,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 115,
    "metadata": {
     "tags": [
      "quiz",
      "swap_columns"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- matrix (before swap) ---\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "\n",
+      "--- matrix (after swap) ---\n",
+      "[[ 0  3  2  1  4]\n",
+      " [ 5  8  7  6  9]\n",
+      " [10 13 12 11 14]]\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the matrix to work with\n",
     "matrix = np.arange(15).reshape(3,5)\n",
@@ -1390,7 +1407,9 @@
     "print(\"--- matrix (before swap) ---\")\n",
     "print(matrix)\n",
     "\n",
-    "# ADD CODE HERE\n",
+    "tmp = matrix[::,1].copy()\n",
+    "matrix[::,1] = matrix[::,3]\n",
+    "matrix[::,3] = tmp\n",
     "\n",
     "print(\"\\n--- matrix (after swap) ---\")\n",
     "print(matrix)"
@@ -1398,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1439,26 +1458,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "metadata": {
     "tags": [
      "quiz",
      "nearest_to_one"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nearest value: 1.2\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the vector to work with\n",
     "vector = np.array([5, -1, 3, 1.2, 8, 0])\n",
     "\n",
     "# ADD CODE HERE\n",
-    "nearest_value = None\n",
+    "abs_diff = np.abs(vector-1)\n",
+    "i = abs_diff.argmin()\n",
+    "nearest_value = vector[i]\n",
     "print('nearest value:', nearest_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 118,
    "metadata": {
     "deletable": false,
     "editable": false,
